fix: fetch images from reviews instead of api
